Adjusted size of centered images, h1 and h2, added fixed vertical scrollbar.

--- a/main.css
+++ b/main.css
@@ -9,6 +9,9 @@ html, body, a, h1, h2, p, main {
 	text-align: center;
 	text-decoration: none;
 }
+html {
+	overflow-y: scroll;
+}
 a {
 	text-decoration: underline;
 }
@@ -19,13 +22,13 @@ h1, h1 a, h2 {
 	font-weight: bold;
 }
 h1, h1 a {
-	font-size: 5rem;
+	font-size: 3rem;
 	font-style: normal;
 	margin: 1rem 0 0 0;
 	text-decoration: none;
 }
 h2, h2 a {
-	font-size: 2rem;
+	font-size: 1.5rem;
 	margin: 0.5rem 0 0.5rem 0;
 }
 p {
@@ -69,5 +72,5 @@ article h1 {
 	text-align: center;
 }
 img.centered {
-	max-height: 700px;
+	max-height: 30rem;
 }
